--- a/public/resources/components/views/home.html
+++ b/public/resources/components/views/home.html
@@ -1,19 +1,35 @@
 <div class="header">
+
   <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-    <img style="width:45px;height:45px;float:left;" ng-src="/images/common/cloud_logo.png" class="pure-img">
+
+    <img style="width:45px;height:45px;float:left;" ng-src="/image/common/cloud_logo.png" src="/image/common/cloud_logo.png" class="pure-img">
+
     <a class="pure-menu-heading" ng-href="https://www.ibm.com/solutions/education/cloudacademy/us/en/" target="_blank">IBM Cloud Academy</a>
+
     <ul class="pure-menu-list">
+
       <li class="pure-menu-item pure-menu-selected"><a class="pure-menu-link" href="#!/">Home</a></li>
-      <!--li class="pure-menu-item"><a class="pure-menu-link" href="#!/catalog">Catalog</a></li-->
-      <!--li class="pure-menu-item"><a class="pure-menu-link" href="#!/customer">Profile</a></li-->
+
+      <li class="pure-menu-item"><a class="pure-menu-link" href="#!/catalog">Catalog</a></li>
+
+      <li class="pure-menu-item"><a class="pure-menu-link" href="#!/customer">Profile</a></li>
+
     </ul>
+
   </div>
-</div>
-<div class="splash-container">
-  <div class="splash">
-    <h1 class="splash-head">LightBlueCompute Store!</h1>
-    <p class="splash-subhead">Welcome to the LightBlue</p>
-    <!--p><a class="pure-button pure-button-primary" href="#!/catalog">Browse Item Catalog</a></p-->
-  </div>
+
 </div>
 
+<div class="splash-container">
+
+  <div class="splash">
+
+    <h1 class="splash-head">LightBlueCompute Store!</h1>
+
+    <p class="splash-subhead">Welcome to the LightBlue</p>
+
+    <!--p><a class="pure-button pure-button-primary" href="#!/catalog">Browse Item Catalog</a></p-->
+
+  </div>
+
+</div>
